--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
 								<div class="o-media  o-media--block">
 									<div class="o-media__figure">
 										<div class="c-number  t-primary-color">
-											80<small>%</small>
+											95<small>%</small>
 										</div>
 									</div>
 									<div class="o-media__body">
-										<h3>HTML5</h3>
+										<h3>Web Development</h3>
 									</div>
 								</div>
 								<div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -389,11 +389,11 @@
 								<div class="o-media  o-media--block">
 									<div class="o-media__figure">
 										<div class="c-number  t-primary-color">
-											75<small>%</small>
+											68<small>%</small>
 										</div>
 									</div>
 									<div class="o-media__body">
-										<h3>CSS3</h3>
+										<h3>NodeJs</h3>
 									</div>
 								</div>
 								<div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -429,7 +429,7 @@
 										</div>
 									</div>
 									<div class="o-media__body">
-										<h3>Java</h3>
+										<h3>Android Development</h3>
 									</div>
 								</div>
 								<div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
@@ -479,11 +479,11 @@
 								<div class="o-media  o-media--block">
 									<div class="o-media__figure">
 										<div class="c-number  t-primary-color">
-											85<small>%</small>
+											50<small>%</small>
 										</div>
 									</div>
 									<div class="o-media__body">
-										<h3>Construct 2 game engine</h3>
+										<h3>IOS Development</h3>
 									</div>
 								</div>
 								<div class="c-progress-bar  o-content__body  t-border-color-bg  u-mt-text">
